Qt6: Fix saving incremental version/backup

QRegExp.replaceIn, unlike QString.replace,
does not modify the string in place.

BUG:518136